# xrpl_sdk_rust

./: Cargo.toml
xrpl_api/: Cargo.toml
xrpl_binary_codec/: Cargo.toml
xrpl_binary_codec/src/: deserialize.rs  deserializer.rs  error.rs  field.rs  lib.rs  serialize.rs  serializer.rs  sign.rs  test_serialize_derive.rs
xrpl_binary_codec/src/field/: field_info.rs
xrpl_cli/: Cargo.toml
xrpl_cli/src/account/offers/: create_offer.rs  remove_offer.rs
xrpl_http_client/: Cargo.toml
xrpl_serialize_derive/: Cargo.toml
xrpl_serialize_derive/src/: lib.rs
xrpl_types/: Cargo.toml
xrpl_types/src/: deserialize.rs  lib.rs  serialize.rs
xrpl_types/src/deserialize/: deserializer.rs
xrpl_types/src/serialize/: mod.rs  serializer.rs
xrpl_types/src/types/: primitive.rs
xrpl_types/src/types/transaction/: common.rs  mod.rs  trust_set.rs
xrpl_types/src/types/transaction/variants/: account_delete.rs  account_set.rs  offer_cancel.rs  offer_create.rs  payment.rs  trust_set.rs
xrpl_ws_client/: Cargo.toml
