[workspace]

resolver = "2"

members = [
    "xrpl_types",
    "xrpl_api",
    "xrpl_address_codec",
    "xrpl_binary_codec",
    "xrpl_cli",
    "xrpl_http_client",
    "xrpl_ws_client",
]

[workspace.package]
version = "0.16.6"
edition = "2021"
authors = ["Georgios Moschovitis <george.moschovitis@gmail.com>"]

[workspace.dependencies]
ascii = { version = "1.1.0", default-features = false }
assert_matches = "1.5.0"
enumflags2 = { version = "0.7.7", default-features = false }
hex = { version = "0.4.3", default-features = false }
libsecp256k1 = { version = "0.7.1", default-features = false }
serde = { version = "1.0.214", default-features = false }
serde_json = { version = "1.0.132", default-features = false }
sha2 = { version = "0.10.8", default-features = false }
thiserror = "1.0.68"
tokio = "1.41.0"
tracing = "0.1.40"
