[package]
name = "xrpl_binary_codec"
description = "Binary serialization for XRPL Protocol objects"
version.workspace = true
authors.workspace = true
edition.workspace = true
license = "Apache-2.0"
repository = "https://github.com/gmosx/xrpl-sdk-rust/tree/main/xrpl_binary_codec"
keywords = ["xrpl", "ledger", "api", "protocol"]

[dependencies]
xrpl_types = { path = "../xrpl_types", version = "0.16.6", default-features = false }
hex = { workspace = true, features = ["alloc"] }
sha2.workspace = true
libsecp256k1 = { workspace = true, features = [
    "static-context",
    "hmac",
] }
bytes = { version = "1.5.0", default-features = false }

# The following dependencies are only used when compiling for `no_std`.
[target.'cfg(not(target_feature = "std"))'.dependencies]
hashbrown = { version = "0.14.2", default-features = false, features = [
    "ahash",
] }
spin = { version = "0.9.8", default-features = false, features = ["once"] }

[features]
default = ["std"]
std = ["xrpl_types/std", "hex/std", "sha2/std", "libsecp256k1/std", "bytes/std" ]

[dev-dependencies]
ascii.workspace = true
assert_matches.workspace = true
enumflags2.workspace = true
serde = { workspace = true, default-features = false, features = [
    "derive",
    "alloc",
] }
