[package]
name = "xrpl_types"
description = "Core types and related functions for the XRP Ledger"
version.workspace = true
authors.workspace = true
edition.workspace = true
license = "Apache-2.0"
repository = "https://github.com/gmosx/xrpl-sdk-rust/tree/main/xrpl_types"
keywords = ["xrpl", "ledger", "api"]

[dependencies]
serde = { workspace = true, features = [
    "derive",
    "alloc",
] }
serde_json = { workspace = true, features = ["alloc"] }
bs58 = { version = "0.5.0", features = [
    "alloc",
    "check",
] }
ascii = { workspace = true, features = ["alloc"] }
hex = { workspace = true, features = ["alloc"] }
enumflags2 = { workspace = true }

[features]
default = ["std"]
std = ["serde/std", "serde_json/std", "bs58/std", "ascii/std", "hex/std", "enumflags2/std"]

[dev-dependencies]
assert_matches.workspace = true
